--- a/backend/server/package.json
+++ b/backend/server/package.json
@@ -1,16 +1,14 @@
 {
   "name": "server",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "json-server --watch events.json -p 5005"
+    "start": "json-server --watch db.json -p 8000"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "axios": "^1.12.2"
-  }
+  "type": "commonjs"
 }
