--- a/backend/server/package.json
+++ b/backend/server/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "axios": "^1.12.2"
+    "axios": "^1.12.2",
+    "json-server": "^1.0.0-beta.3"
   }
 }
